validator_derive_tests/tests/compile-fail/must_not_match/unexpected_name_value.rs
use validator::Validate;

#[derive(Validate)]
struct Email {
    #[validate(not_a(other = "validator"))]
    email: String,
}

fn main() {}
